# meta2cpp

./: CMakeLists.txt  README.md
meta/: emp.json  props.json  response.json  role.json  user.json
src/: Generator.hpp  main.cpp
test/: CMakeLists.txt  conanfile.txt
test/src/: main.cpp
test/src/lang/: en.json  kr.json
